--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body{
 }
 
 .App{
-  max-width: 960px;
+  max-width: 1260px;
   margin: 0 auto;
 }
 
@@ -21,6 +21,7 @@ body{
   font-size: 1.2rem;
   letter-spacing: 2px;
   font-weight: normal;
+  padding: 15px;
 }
 
 .cross{
@@ -42,3 +43,56 @@ body{
   background: var(--primary);
   color: white;
 }
+
+.add-form{
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.add-form label {
+  text-align: left;
+  display: block;
+}
+
+.add-form h2 {
+  font-size: 20px;
+  color: #4e4e4e;
+  margin-bottom: 10px;
+}
+
+.add-form input {
+  width: 100%;
+  height: 50px;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+  font-size: 16px;
+}
+
+.add-form textarea{
+  width: 100%;
+  height: 150px;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+  font-size: 16px;
+}
+
+.add-form button {
+  background: var(--primary);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* .card-body{
+  background-color: #4e4e4e;
+} */
+
