--- a/src/comps/Inventory/Item/Item.css
+++ b/src/comps/Inventory/Item/Item.css
@@ -1,23 +1,17 @@
-.cross{
-  /* float: left; */
-  /* display: block;  */
-  width: 25px;
-  height: 25px;
-  /* border: 1px solid var(--primary); */
-  border-radius: 50%;
+/* .cross{
+  width: 30px;
+  height: 30px;
   margin: 5px;
-  /* line-height: 30px; */
+  float: left;
   color: var(--primary);
   font-weight: bold;
-  font-size: 20px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  
 }
 
 .cross:hover{
   background: var(--primary);
   color: white;
-}
+} */
 .card{
   text-align: center;
 }
